# 3D_Object_Viewer

./: ..imgui.ini  .gitignore  .gitmodules  3D_Object_Viewer.cpp  3D_Object_Viewer.sln  3D_Object_Viewer.vcxproj  3D_Object_Viewer.vcxproj.filters  README.md  imgui.ini
Dependencies/: CMakeLists.txt
Dependencies/stbi_image/: stb_imp.cpp
Shaders/: CMakeLists.txt  ClearColorMeshShader.glsl  ColorShader.glsl  ColorSpaceUtilityFunctions.glsl  GridShader.glsl  LightShader.glsl  MaterialShader.glsl  NormalOrientationShader.glsl  PostProcessShader.glsl  SceneSampleShader.glsl  Shader.glsl  ShaderCommonFunctions.glsl  ShaderPath.h  SingleTextureInspectShader.glsl  SkyboxShader.glsl  UVShader.glsl  WireframePointShader.glsl  WireframeShader.glsl
project/: LICENSE.txt  imgui.ini
src/: 3D_Object_Viewer.cpp  AppEvent.h  AppState.cpp  AppState.h  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonAppData.h  DialogWrapper.h  Events.h  Framebuffer.cpp  Framebuffer.h  IObserver.h  InputHandler.cpp  InputHandler.h  Mesh.h  MeshGeneratingMethods.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  RenderingMediator.h  RenderingSettings.cpp  RenderingSettings.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexAttributeObject.cpp  VertexAttributeObject.h  WindowHandler.cpp  WindowHandler.h  WindowInputFuncs.cpp  WindowInputFuncs.h
src/Controls/: AppKeyBindings.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  KeyboardKeys.h  MouseKeys.h
src/Core/: AppEvent.h  Application.cpp  Application.h  CMakeLists.txt  CommonAppData.h  Config.h  Config.h.in  Event.h  Events.h  ProjectPathHelper.h  SceneViewport.h  WindowEvents.h  WindowHandler.cpp  WindowHandler.h
src/Enums/: CMakeLists.txt  EventTypeCategoryEnums.h  FIleImageEnums.h  GpuDataTypes.h  MaterialFlags.h  OpenGLBufferType.h  TextureEnums.h
src/Helpers/: CMakeLists.txt  DialogWrapper.cpp  DialogWrapper.h  FileFromatStruct.h  MeshGeneratingMethods.h  ModelGenerator.cpp  ModelGenerator.h  ModelLoader.cpp  ModelLoader.h  TextureHelpers.cpp  TextureHelpers.h  UnitTransformer.h
src/Logging/: App_Logger.cpp  App_Logger.h  CMakeLists.txt
src/Profiling/: AppProfiler.cpp  AppProfiler.h  CMakeLists.txt
src/Rendering/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  Renderer.cpp  Renderer.h  RenderingCoordinator.cpp  RenderingCoordinator.h  RenderingMediator.h  SceneConfigurationSettingsStruct.h  SceneRenderer.cpp  SceneRenderer.h  ShaderClass.cpp  ShaderClass.h  ShaderLibrary.cpp  ShaderLibrary.h  UIRenderer.cpp  UIRenderer.h
src/Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Material.cpp  Material.h  MaterialRegistry.cpp  MaterialRegistry.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
src/UI/: CMakeLists.txt  UILayer.cpp  UILayer.h
src/gpu_side/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  TextureEnums.h  UniformBuffer.cpp  UniformBuffer.h  VertexAttributeObject.cpp  VertexAttributeObject.h
src/pch/: CMakeLists.txt  pch.h
